2015-11-16  Robert D. Vincent <robert.d.vincent@mcgill.ca>
   * volume_io/Volumes/volumes.c,
     volume_io/Include/volume_io/vol_io_protoypes.h: Added
	copy_volume_new_type() and declared that
	get_volume_total_n_voxels() returns size_t.
   * testdir/volume_test.c: Created a simple test for volume functions.
   * CMakeLists.txt: Updated LIBMINC_SOVERSION

2015-10-14  Robert D. Vincent <robert.d.vincent@mcgill.ca>
   * volume_io/Volumes/input_mgh.c: Fix loading of time-varying MGZ files.

2015-10-07  Robert D. Vincent <robert.d.vincent@mcgill.ca>
   * libsrc2/m2util.c, libsrc2/volume.c: Fix improper handling of
	label volumes on big-endian architectures.

-- Release of minc 2.3.00 --
2015-10-01  Vladimir S. FONOV <vladimir.fonov@gmail.com>
   * Added new configuration environment variable MINC_FILE_CACHE_MB, 
  it specifies (in megabytes) maximum per file cache for reading MINC2 files
  default value is 100 Mb. **WARNING** specifying value of 0 will 
  significantly degrade performance on compressed minc2 files.
  
   * Added new configuration environment variable MINC_CHECKSUM, when 
   set to 1 will enable FLETCHER32 checksum in new MINC2 files, but only when 
   chunking is enabled
   
2015-09-11  Robert D. Vincent <robert.d.vincent@mcgill.ca>
   * Remove autoconf/automake support.

2015-08-24  Robert D. Vincent <robert.d.vincent@mcgill.ca>
   * libsrc/netcdf_convenience.c: Changed the logic in miopen() to
	explicitly differentiate netCDF vs. HDF5 files. This was needed
	because ncopen() in netCDF 4.4 successfully opens HDF5 files, so
	the old	logic no longer worked.

2015-08-13  Robert D. Vincent <robert.d.vincent@mcgill.ca>
   * volume_io/Volumes/input_nifti.c: Fix loading of dynamic scans, handle
	NIfTI units.

2015-06-11  Robert D. Vincent <robert.d.vincent@mcgill.ca>
   * libsrc/minc.h, libsrc2/minc2_defs.h: Increase MI_MAX_NUM_ICV from 32
	to 1000. This should improve the behavior of voxel_loop programs
	when used with a large number of input files.
